<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoWall</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Signup</string>
    <string name="nickText">Insert username or email</string>
    <string name="pwText">Insert password</string>
    <string name="forgotLabel">Forgot your password?</string>
    <string name="socialButton">Login with:</string>
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string name="nickRegistrationText">Insert username</string>
    <string name="pwRegistrationText">Insert password</string>
    <string name="emailRegistrationText">Insert email</string>
    <string name="saveButton">Save</string>
    <string name="finishButton">Finish</string>
    <string name="registrationText">Sign up, all fields are required.</string>
    <string name="registrationAdvancedText">All fields are optional.</string>
    <string name="birthdayText">Birthday</string>
    <string name="photoText">Profile picture</string>
    <string name="formatDate">dd/mm/yyyy</string>
    <string name="cityText">Insert your city</string>
    <string name="countryText">Insert your country</string>
    <string name="mediaText">Select Mode</string>
    <string name="getPhotoText">Select Photo</string>
    <string name="takePhotoText">Take a Photo</string>
    <string name="outOfMemoryException">The max image size is 5 MB</string>
    <string name="sendText">Send</string>
    <string name="messageText">Geowall</string>
    <string name="dialogTitle">Insert Message</string>
    <string name="settingMenu">Setting Account</string>
    <string name="logutMenu">Exit</string>
</resources>